[gd_scene load_steps=3 format=3 uid="uid://cx1apuffx7jfm"]

[ext_resource type="Script" path="res://Scripts/connector.gd" id="1_ie0o8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7iio"]
size = Vector2(4, 25)

[node name="Connector" type="Node2D"]
script = ExtResource("1_ie0o8")

[node name="PortalRight" type="ColorRect" parent="."]
offset_left = 264.0
offset_top = -108.0
offset_right = 288.0
offset_bottom = -84.0
size_flags_horizontal = 8
color = Color(0.266667, 0.329412, 0.34902, 1)

[node name="Area2D" type="Area2D" parent="PortalRight"]
position = Vector2(24, 12)
scale = Vector2(0.279995, 0.96)
collision_layer = 8
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalRight/Area2D"]
shape = SubResource("RectangleShape2D_l7iio")

[node name="PortalLeft" type="ColorRect" parent="."]
offset_left = -264.0
offset_top = -84.0
offset_right = -240.0
offset_bottom = -60.0
rotation = -3.14159
size_flags_horizontal = 8
color = Color(0.266667, 0.329412, 0.34902, 1)

[node name="Area2D" type="Area2D" parent="PortalLeft"]
position = Vector2(24, 12)
scale = Vector2(0.279995, 0.96)
collision_layer = 8
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalLeft/Area2D"]
shape = SubResource("RectangleShape2D_l7iio")

[connection signal="body_entered" from="PortalRight/Area2D" to="." method="_on_area_right_2d_body_entered"]
[connection signal="body_exited" from="PortalRight/Area2D" to="." method="_on_area_right_2d_body_exited"]
[connection signal="body_entered" from="PortalLeft/Area2D" to="." method="_on_area_left_2d_body_entered"]
[connection signal="body_exited" from="PortalLeft/Area2D" to="." method="_on_area_left_2d_body_exited"]
